2003-06-09  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/Plugins.py: Register book items with options and style instead 
	of the functions get_options and get_style.
	* src/plugins/BookReport.py, src/plugins/FtmStyleDescendants.py,
	src/plugins/FtmStyleAncestors.py: Change from functions to values,
	accordingly. Also switch to a proper use of dialog.run(). 

2003-06-08  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/BookReport.py, src/plugins/FtmStyleDescendants.py: 
	Minor fixes.
	* src/plugins/book.glade: Add Open and Save buttons.
	* src/plugins/FtmStyleAncestors.py: Enable book item functionality. 

2003-06-08  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/Report.py: De-uglify center_person frame.
	* src/plugins/BookReport.py: Add a center person column to a book
	selector dialog.
	* src/plugins/FtmStyleDescendants.py: Get the style right.

2003-06-08  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/Report.py, src/plugins/BookReport.py, 
	src/plugins/FtmStyleDescendants.py: Fix changing center person -- only
	remember change if OK was clicked.

2003-06-07  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/Report.py: Clean up the split into BareReportDialog and
	ReportDialog classes.
	* src/Plugins.py: Enable book item registration. 
	* src/plugins/BookReport.py: lots of changes -- trying to get it work. 
	* src/plugins/FtmStyleDescendants.py: book item functionality. 

2003-06-07  Don Allingham  <dallingham@users.sourceforge.net>

	* src/EditPerson.py: Allow a default gender to be specified if a new
	person is being added
	* src/AddSpouse.py: All EditPerson dialog instead of QuickAdd

2003-06-07  Don Allingham  <dallingham@users.sourceforge.net>

	* src/FamilyView.py: Call marriage editor with callback to update
	the family view
	* src/Marriage.py: Call the family view callback after saving to update
	the display with changed marriage information

2003-06-07  Don Allingham  <dallingham@users.sourceforge.net>

	* src/EditPerson.py: