@@ -180,7 +180,7 @@ def importData(database, filename, callback,cl=0):
     def select_clicked():
         # File is lost => select a file to replace the lost one
         def fs_close_window(obj):
-            fs_top.destroy()
+            pass
 
         def fs_ok_clicked(obj):
             name = fs_top.get_filename()
@@ -190,14 +190,13 @@ def importData(database, filename, callback,cl=0):
                     shutil.copystat(name,newfile)
                 except:
                     pass
-            Utils.destroy_passed_object(fs_top)
 
         fs_top = gtk.FileSelection("%s - GRAMPS" % _("Select file"))
         fs_top.hide_fileop_buttons()
         fs_top.ok_button.connect('clicked',fs_ok_clicked)
         fs_top.cancel_button.connect('clicked',fs_close_window)
-        fs_top.show()
         fs_top.run()
+        fs_top.destroy()
 
 #-------------------------------------------------------------------------
 
